--- a/common/themes/dnn/styles/base.less
+++ b/common/themes/dnn/styles/base.less
@@ -7,14 +7,17 @@ body{
     font-size: 16px;
 }
 
+body,th,td,table,h1,h2,h3,h4,h5,h6,p,ul,ol,a:link,a:visited,a:hover,input
+{
+    font-family:"AvenirNextLTPro-Regular","Helvetica Neue","HelveticaNeue",Arial,Helvetica,sans-serif;
+    -webkit-font-smoothing: antialiased;
+    font-smoothing: antialiased;
+}
+
+h1, h2, h3 { color: @gray-dark }
+
+h2 { font-size: 22px; }
+
 a{
-	color: @blue-light;
-}
-
-p{
-	//color: #838383;
-}
-
-h1, h2 {
-	color: @blue-light;	
+	color: @blue-dark;  
 }
