--- a/common/themes/dnn/styles/variables.less
+++ b/common/themes/dnn/styles/variables.less
@@ -5,7 +5,8 @@
 @red: #f03c40;
 @blue: #0aa8e7;
 	@blue-light: #19aee5;
-	@blue-dark: #07a7e3;
+	@blue-dark: #0d8dbf;
+
 
 @purple: #8b098f;
 @green: #9daa12;
@@ -14,5 +15,6 @@
 @yellow: #ff0;
     @yellow-light: lighten(@yellow, 43%);
 
+@gray-dark: #515151;
 @gray-medium: #888;
 @gray-light: #f4f4f4;
