--- a/common/themes/dnn/styles/documentation.less
+++ b/common/themes/dnn/styles/documentation.less
@@ -147,7 +147,6 @@
 .doc-search{
     padding: 5px;
     width: 100%;
-    border-radius: 5px;
     border:none;
     color:#787878;
 }
@@ -197,6 +196,10 @@
     
     li {
         margin-bottom: 1.5em;
+    }
+    
+    dd li {
+        margin-bottom: 0;
     }
     
     ul img, ol img{
