Hide 2nd level nav The second level right nav was not rendering properly.  This hides the nav until we have a better fix.

--- a/common/themes/dnn/static/dnn.styles.css
+++ b/common/themes/dnn/static/dnn.styles.css
@@ -944,6 +944,9 @@ ol.collapse-list li {
     padding: 5px 30px;
     display: block;
   }
+  .article-nav-wrapper .article-nav li > ul {
+    display: none;
+  }
   .article-nav-wrapper .article-nav .active a {
     color: #bdbdbd;
   }
