--- a/common/themes/dnn/styles/documentation.less
+++ b/common/themes/dnn/styles/documentation.less
@@ -406,6 +406,10 @@ ul.collapse-list, ol.collapse-list {
                     padding: 5px 30px;
                     display: block;
                 }
+                
+                > ul {
+                    display:none;
+                }
             }
                 
             .active{
