--- a/common/themes/dnn/styles/documentation.less
+++ b/common/themes/dnn/styles/documentation.less
@@ -218,12 +218,16 @@
 }
 
 
-ul.collapse-list, ol.collapse-list {
+ul.collapse-list, ol.collapse-list, .hlist ul {
     margin-bottom: 10px;
     
     li {
         margin: 0;
     }
+}
+
+.hlist td {
+    vertical-align: top;
 }
 
 #in-this-section {
