DOC-4 Update warning style The warning style was updated to complement the note and tip styles

--- a/common/themes/dnn/styles/sphinx.less
+++ b/common/themes/dnn/styles/sphinx.less
@@ -52,6 +52,15 @@
     }    
 } 
 
+.warning {
+    background-color: #ffdbdb;
+    border: 1px solid #e68f8f;
+    
+    p.admonition-title{
+        color: #c64f4f;
+    } 
+}
+
 /* Inline Code (<code>) */
 code { 
     background-color: #f2f8f9; 
