--- a/common/themes/dnn/static/dnn.styles.css
+++ b/common/themes/dnn/static/dnn.styles.css
@@ -1018,6 +1018,13 @@ ol.collapse-list li,
   font-weight: 700;
   color: #c2bc69;
 }
+.warning {
+  background-color: #ffdbdb;
+  border: 1px solid #e68f8f;
+}
+.warning p.admonition-title {
+  color: #c64f4f;
+}
 /* Inline Code (<code>) */
 code {
   background-color: #f2f8f9;
