--- a/common/themes/dnn/styles/documentation.less
+++ b/common/themes/dnn/styles/documentation.less
@@ -202,7 +202,7 @@
         margin-bottom: 0;
     }
     
-    ul img, ol img{
+    ul img, ol img, img.dnn-border {
         background: #f9f9f9;
         border: 6px double #fff;
         padding: 1em;        
