--- a/common/themes/dnn/styles/documentation.less
+++ b/common/themes/dnn/styles/documentation.less
@@ -242,6 +242,24 @@ ul.collapse-list, ol.collapse-list, .hlist ul {
     }
 }
 
+#admin-center h1 {
+    border-bottom: 4px solid @green;
+    padding-bottom: 10px;
+    font-variant: small-caps;
+}
+
+#dev-center h1 {
+    border-bottom: 4px solid @purple;
+    padding-bottom: 10px;
+    font-variant: small-caps;
+}
+
+#design-center h1 {
+    border-bottom: 4px solid @orange;
+    padding-bottom: 10px;
+    font-variant: small-caps;
+}
+
 @media (min-width: 992px){
 	.doc-main-body{
 
