--- a/common/themes/dnn/styles/sphinx.less
+++ b/common/themes/dnn/styles/sphinx.less
@@ -97,3 +97,9 @@ table.dnn-table {
         }
     }
 }
+
+div.figure p.caption {
+    font-weight: bold;
+    width: 600px;
+    text-align: center;
+}
